Fix extraneous whitespace in main content section

--- a/src/components/Event/Event.css
+++ b/src/components/Event/Event.css
@@ -25,6 +25,6 @@
   }
 
   .Event-Section {
-    padding-top: calc(var(--spacingUnit) * 3);
+    padding-top: calc(var(--spacingUnit) * 2);
   }
 }
